:pencil2: UPDATE: author git url

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"author": {
 		"name": "Julian BRUXELLE",
-		"url": "https://github.com/JulianBruxelle"
+		"url": "https://github.com/jbruxelle"
 	},
 	"type": "module",
 	"scripts": {
