--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
 		"typescript": "^4.4.3"
 	},
 	"dependencies": {
-		"@kitql/all-in": "0.1.4",
+		"@kitql/all-in": "0.2.4",
+		"@lukeed/uuid": "^2.0.0",
+		"cookie": "^0.4.2",
 		"graphql": "16.3.0"
 	},
 	"engines": {
