:ok_hand: UPDATE: template types

--- a/src/lib/storyblok/templates/index.template
+++ b/src/lib/storyblok/templates/index.template
@@ -4,7 +4,7 @@ import type { SvelteComponent } from 'svelte';
 
 type Component = new (...args: [any]) => SvelteComponent;
 
-export const components = {
+export const components: Record<string, Component> = {
 	{{#names}}{{ this }},{{/names}}
 };
 
